# hydra-experiment-sweeper

./: .gitignore  MANIFEST.in  README.md  pyproject.toml  setup.cfg
example/: train.py
example/config/: experiment.yaml  train.yaml
example/config/model/: linreg.yaml  svm.yaml
hydra_plugins/experiment_sweeper_plugin/: experiment_sweeper.py
tests/: test_experiment_sweeper_plugin.py
tests/configs/: overrides.yaml  ranges.yaml
